# electric-blue

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: install_windows_service.ps1  transcribe.service
docs/: CADENCE.md  INVARIANTS.md
docs/homelab/: README.md
docs/specs/backend-seam/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  04-ROADMAP.md  05-REVIEW.md  PROGRESS.md
docs/specs/completion-webhook/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  04-ROADMAP.md  05-REVIEW.md  PROGRESS.md
docs/specs/electric-blue-ddrs/: 00-DDR-INDEX.md  DDR-01-project-scaffolding.md  DDR-02-backend-seam-and-api-characterization.md  DDR-03-groq-batch-backend.md  DDR-04-completion-webhook.md  DDR-05-whisperx-diarization.md  DDR-06-pypi-publish.md  DDR-FRANK-VERDICT.md  DDR-REVIEW.md
docs/specs/groq-batch/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  04-ROADMAP.md  05-REVIEW.md  PROGRESS.md
docs/specs/pypi-publish/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  04-ROADMAP.md  05-REVIEW.md  PROGRESS.md  RUNBOOK-LIVE.md
docs/specs/whisperx-diarization/: 01-REQUIREMENTS.md  02-ARCHITECTURE.md  04-ROADMAP.md  05-REVIEW.md  PROGRESS.md
src/electric_blue/: __init__.py  audio.py  batch_store.py  cli.py  config.py  drain.py  exceptions.py  models.py  notify.py  outputs.py  staging.py  watcher.py
src/electric_blue/backends/: __init__.py  api.py  base.py  batch_groq.py  diarize.py  local.py
tests/: conftest.py  test_backends_registry.py  test_batch_groq.py  test_batch_store.py  test_char_api.py  test_char_batch.py  test_char_local.py  test_char_notify.py  test_config.py  test_diarize_pipeline.py  test_drain.py  test_handle_batch.py  test_install_editable.py  test_notify.py  test_outputs.py  test_smoke.py  test_smoke_diarize.py  test_staging.py  test_watcher.py
