[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electric-blue"
version = "0.1.0"
description = "Drop-folder transcription pipeline — local or API backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Danny Clarke", email = "dclarke@islandef.com" }]
dependencies = [
    "watchdog>=3",
    "requests>=2.28",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.2.0,<2.0"]  # bounded: aligns with whisperx floor; guards a 2.x break (INV-13)
dev = [
    "pytest>=8",
    "black>=24",
    "ruff>=0.4",
    "pre-commit",
    "imageio-ffmpeg",
]

[project.scripts]
electric-blue = "electric_blue.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/electric_blue"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["smoke: end-to-end tests requiring ffmpeg and faster-whisper"]
