[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "electric-blue"
version = "0.1.0"
description = "Drop-folder transcription pipeline — local or API backend."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Danny Clarke", email = "dclarke@islandef.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
keywords = ["transcription", "whisper", "speech-to-text", "ffmpeg", "drop-folder", "watchdog"]
dependencies = [
    "watchdog>=3",
    "requests>=2.28",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.2.0,<2.0"]  # bounded: aligns with whisperx floor; guards a 2.x break (INV-13)
diarize = ["whisperx>=3.8.6,<4.0"]
dev = [
    "pytest>=8",
    "black>=24",
    "ruff>=0.4",
    "pre-commit",
    "imageio-ffmpeg",
]

[project.scripts]
electric-blue = "electric_blue.cli:main"

[project.urls]
Homepage = "https://github.com/dannySubsense/electric-blue"
Repository = "https://github.com/dannySubsense/electric-blue"
Issues = "https://github.com/dannySubsense/electric-blue/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/electric_blue"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: end-to-end tests requiring ffmpeg and faster-whisper",
    "diarize_smoke: end-to-end tests requiring HF_TOKEN env var and [diarize] installed",
]
